--- a/机器人学_控制_2.md
+++ b/机器人学_控制_2.md
@@ -143,6 +143,7 @@ end
 5. 将得到的x中的角度通过正向运动学赋给机械臂。
 
 ### 利用Simulink实现的力控制
+（刘金琨《机器人控制系统的设计与MATLAB仿真》）
 
 #### 力前馈控制
 相比力控制，在PID基础上增加了直接注入力或力矩的干扰项前馈调节，作用于控制部分，使机械臂及早作出适应性反应。
